--- a/views/student_registration.xml
+++ b/views/student_registration.xml
@@ -11,13 +11,6 @@
             <field name="view_mode">tree,form,search,kanban</field>
             <field name="domain">[('is_student','=',True)]</field>
         </record>
-        <record id="create_invoice" model="ir.actions.act_window">
-            <field name="name">Create student invoice</field>
-            <field name="res_model">account.move</field>
-            <field name="view_mode">form</field>
-            <field name="view_id" ref="account.view_move_form"/>
-            <field name="target">new</field>
-        </record>
         <record id="student_registration_list" model="ir.ui.view">
             <field name="name">student registration</field>
             <field name="model">student.registration</field>
@@ -38,17 +31,24 @@
             <field name="model">student.registration</field>
             <field name="arch" type="xml">
                 <form>
-                    <sheet>
-                        <header>
 
-                            <button name="button_confirmed" string="Confirmed" type="object"/>
-                            <button name="button_cancel" string="Canceled" type="object"/>
-                            <button name="%(create_invoice)d" string="Create Invoice" type="action"
-                                class="btn-primary" data-hotkey="q"
-                            />
-                            <field name="state" widget="statusbar" statusbar_visible="draft,confirmed,canceled"/>
-                        </header>
-                        <group>
+                    <header>
+
+                        <button name="button_confirmed" string="Confirmed" type="object"/>
+                        <button name="button_cancel" string="Canceled" type="object"/>
+                        <button name="action_create_invoice" string="Create Invoice" type="object"
+                                class="btn-primary"
+                        />
+                        <field name="state" widget="statusbar" statusbar_visible="draft,confirmed,canceled"/>
+                    </header>
+                    <sheet>
+                            <div class="oe_button_box" name="button_box">
+                                <button type="object" name="view_invoices"
+                                        class="oe_stat_button" icon="fa-pencil-square-o">
+                                    <field name="count_invoices" widget="statinfo" string="Invoicing"/>
+                                </button>
+                            </div>
+                         <group>
                             <field name="name"/>
                             <field name="student_id" context="{
                             'default_is_student':True}"/>
